// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Version Map Function  case 2 1`] = `
Object {
  "2": Array [
    Object {
      "type": "public",
    },
    Object {
      "type": "private",
    },
  ],
}
`;

exports[`Create Version Map Function Case 1 1`] = `
Object {
  "1": Array [
    Object {
      "orgs": Array [
        "o-sjdnfkjsdncjks",
        "o-swjbnfsdjkbf",
      ],
      "type": "awsOrg",
    },
    Object {
      "type": "private",
    },
  ],
}
`;

exports[`Create Version Map Function case3 1`] = `
Object {
  "3": Array [
    Object {
      "orgs": Array [
        "o-sjdnfkjsdncjks",
        "o-swjbnfsdjkbf",
      ],
      "type": "awsOrg",
    },
    Object {
      "accounts": Array [
        "111111111111",
        "222222222222",
        "333333333333",
      ],
      "type": "awsAccounts",
    },
    Object {
      "type": "private",
    },
    Object {
      "type": "public",
    },
  ],
}
`;

exports[`Create Version Map Function case4 1`] = `
Object {
  "4": Array [
    Object {
      "accounts": Array [
        "111111111111",
        "222222222222",
        "333333333333",
      ],
      "type": "awsAccounts",
    },
    Object {
      "type": "private",
    },
  ],
}
`;
